fix whitespace in generated left nav html

--- a/css/main.css
+++ b/css/main.css
@@ -94,10 +94,6 @@ nav {
   margin-top: 5px;
 }
 
-#left-nav .left-nav-blog-list li{
-  margin-top: 5px;
-}
-
 #left-nav .current {
   font-weight: bolder;
 }
